Fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
   --border-width: 0.0625rem;
   --border-radius: 0.75rem;
   --picker-background: rgb(255 255 255 / 0.95);
+  --hover-color: hsl(0deg 0% 93%);
 }
 
 *,
@@ -72,5 +73,6 @@ body {
     --info: #959ea5;
     --white: var(--background);
     --picker-background: var(--background);
+    --hover-color: hsl(0deg 0% 20%);
   }
 }
